--- a/about.html
+++ b/about.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="About Me - Portfolio Site">
     <title>About Me</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
+    <script src="/scripts/theme.js" defer></script>
 </head>
 <body>
     
     <header>
         <h1>About Me</h1>
+        <button id="theme-toggle" class="theme-toggle">Dark Mode</button>
         <input type="checkbox" id="menu-toggle" class="menu-checkbox">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
@@ -19,7 +21,8 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="form-no-js.html">No JS Contact</a></li>
+                <li><a href="js-contact-form.html">JS Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +56,7 @@
     </main>
 
     <footer>
-        <p>© 2025 Diego Marquez | <a href="contact.html">Contact</a></p>
+        <p>© 2025 Diego Marquez | <a href="form-no-js.html">Contact</a></p>
     </footer>
 
 </body>
