--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
+    <script src="/scripts/theme.js"></script>
 </head>
 <body>
 
     <header>
         <h1>My Projects</h1>
+        <button id="theme-toggle" class="theme-toggle">Dark Mode</button>
         <input type="checkbox" id="menu-toggle" class="menu-checkbox">
         <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav>
@@ -18,7 +20,8 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="form-no-js.html">No JS Contact</a></li>
+                <li><a href="js-contact-form.html">JS Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -64,7 +67,7 @@
     </main>
 
     <footer>
-        <p>© 2025 Diego Marquez | <a href="contact.html">Contact</a></p>
+        <p>© 2025 Diego Marquez | <a href="form-no-js.html">Contact</a></p>
     </footer>
 
 </body>
